--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social_network_api",
+  "name": "social_network_api_2",
   "version": "1.0.0",
   "description": "This is a social network API",
   "main": "index.js",
